--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,20 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+
+@import './utils/varibles';
+@import './base/common';
+@import './base/reset';
+@import './utils/hidden';
+
+@import './components/container';
+
+@import './layout/header';
+@import './layout/hero';
+@import './layout/products';
+@import './layout/about';
+@import './layout/advantages';
+@import './layout/gallery';
+@import './layout/customer-reviews';
+@import './layout/contacts';
+@import './layout/footer';
