--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,1 +1,14 @@
-<h1>Title</h1>
+<section class="hero">
+  <div class="container">
+    <h1 class="main-title">ice cream made with <span class="main-title__passion">passion</span></h1>
+    <ul class="hero-btns list">
+      <li class="hero-btns__item">
+        <div class="product"></div>
+        <button class="hero-btn btn product" type="button">Products</button>
+      </li>
+      <li class="hero-btns__item">
+        <button class="hero-btn btn how" type="button">How it’s made?</button>
+      </li>
+    </ul>
+  </div>
+</section>
