--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -69,4 +69,159 @@ img {
     width: 1280px;
   }
 }
+
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+button {
+  cursor: pointer;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  width: 100%;
+  margin: 0 auto;
+  padding-right: 50px;
+  padding-left: 50px;
+}
+
+.contacts-title {
+  opacity: 0;
+}
+
+.contacts-cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.contacts-cards__item {
+  width: auto;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+          box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  border-radius: 24px;
+  padding: 43px 20px;
+  margin: 20px 20px;
+}
+
+@media screen and (min-width: 320px) {
+  .contacts-cards__item {
+    width: 220px;
+  }
+}
+
+.contacts-cards-type {
+  display: inline-block;
+  padding: 0px 30px;
+  background: #F0D1A5;
+  border-radius: 4px;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.86;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #FFFFFF;
+}
+
+.contacts-cards-type--green {
+  background-color: #C2E297;
+}
+
+.contacts-cards-city {
+  color: #000;
+  padding-top: 25px;
+}
+
+.contacts-cards-text {
+  color: #907E82;
+  padding-bottom: 25px;
+  padding-top: 10px;
+  line-height: 1.5;
+}
+
+.contacts-cards-timetable {
+  border-bottom: 1px solid #E1E1E1;
+  border-top: 1px solid #E1E1E1;
+  padding-bottom: 25px;
+  padding-top: 25px;
+}
+
+.contacts-cards-list {
+  padding-top: 25px;
+}
+
+.contacts-cards-time {
+  color: #FFA5BA;
+  margin-bottom: 10px;
+}
+
+.contacts-cards-tel,
+.contacts-cards-mail {
+  color: #907E82;
+  line-height: 1.5;
+}
+
+.contacts-btn-list {
+  margin-top: 34px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contacts-btn {
+  background: #D41342;
+  border-radius: 22px;
+}
 /*# sourceMappingURL=main.css.map */
