--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -41,8 +41,11 @@ button {
   padding: 0;
 }
 
+.contacts {
+    background-color: #FFF5F6;
+}
+
 .container {
-  width: 100%;
   margin: 0 auto;
   padding-right: 50px;
   padding-left: 50px;
@@ -135,3 +138,4 @@ button {
   background: #D41342;
   border-radius: 22px;
 }
+
