--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -16,7 +16,7 @@
             <p class="contacts-cards-time">08:00 AM - 16:00 PM</p>
           </li>
         </ul>
-        <ul list">
+        <ul class="contacts-cards-list list">
           <li>
             <a href="tel:+610383766284" class="contacts-cards-tel link">+61(0) 383 766 284</a>
           </li>
@@ -41,12 +41,12 @@
             <p class="contacts-cards-time">08:00 AM - 16:00 PM</p>
           </li>
         </ul>
-        <ul list">
+        <ul class="contacts-cards-list list"">
           <li>
-            <a href="tel:+610383766284" class="contacts-cards-tel">+61(0) 383 766 284</a>
+            <a href="tel:+610383766284" class="contacts-cards-tel link">+61(0) 383 766 284</a>
           </li>
           <li>
-            <a href="mailto:noreply@envato.com" class="contacts-cards-mail">noreply@envato.com</a>
+            <a href="mailto:noreply@envato.com" class="contacts-cards-mail link">noreply@envato.com</a>
           </li>
         </ul>
       </li>
@@ -64,12 +64,12 @@
             <p class="contacts-cards-time">08:00 AM - 16:00 PM</p>
           </li>
         </ul>
-        <ul list">
+        <ul class="contacts-cards-list list">
           <li>
-            <a href="tel:+610383766284" class="contacts-cards-tel">+61(0) 383 766 284</a>
+            <a href="tel:+610383766284" class="contacts-cards-tel link">+61(0) 383 766 284</a>
           </li>
           <li>
-            <a href="mailto:noreply@envato.com" class="contacts-cards-mail">noreply@envato.com</a>
+            <a href="mailto:noreply@envato.com" class="contacts-cards-mail link">noreply@envato.com</a>
           </li>
         </ul>
       </li>
