--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -114,8 +114,11 @@ button {
   padding: 0;
 }
 
+.contacts {
+  background-color: #FFF5F6;
+}
+
 .container {
-  width: 100%;
   margin: 0 auto;
   padding-right: 50px;
   padding-left: 50px;
