--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
   height: 665px;
-  background-color: var(--hero-backgroung-color);
+  background-color: pink;
   position: absolute;
   top: 0;
   left: 0;
