--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -33,7 +33,7 @@ button {
 
 .link {
   text-decoration: none;
-} 
+}
 
 .list {
   list-style: none;
@@ -42,7 +42,7 @@ button {
 }
 
 .contacts {
-    background-color: #FFF5F6;
+  background-color: #fff5f6;
 }
 
 .container {
@@ -76,7 +76,7 @@ button {
 .contacts-cards-type {
   display: inline-block;
   padding: 0px 30px;
-  background: #F0D1A5;
+  background: #f0d1a5;
   border-radius: 4px;
   font-family: 'DM Sans';
   font-style: normal;
@@ -86,11 +86,11 @@ button {
   text-transform: uppercase;
   text-align: center;
   letter-spacing: 0.04em;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .contacts-cards-type--green {
-  background-color: #C2E297;
+  background-color: #c2e297;
 }
 
 .contacts-cards-city {
@@ -99,31 +99,31 @@ button {
 }
 
 .contacts-cards-text {
-  color: #907E82;
+  color: #907e82;
   padding-bottom: 25px;
   padding-top: 10px;
   line-height: 1.5;
 }
 
 .contacts-cards-timetable {
-  border-bottom: 1px solid #E1E1E1;
-  border-top: 1px solid #E1E1E1;
+  border-bottom: 1px solid #e1e1e1;
+  border-top: 1px solid #e1e1e1;
   padding-bottom: 25px;
   padding-top: 25px;
-}  
+}
 
 .contacts-cards-list {
   padding-top: 25px;
 }
 
 .contacts-cards-time {
-  color: #FFA5BA;
-    margin-bottom: 10px;
+  color: #ffa5ba;
+  margin-bottom: 10px;
 }
 
 .contacts-cards-tel,
 .contacts-cards-mail {
-  color: #907E82;
+  color: #907e82;
   line-height: 1.5;
 }
 
@@ -135,7 +135,6 @@ button {
 }
 
 .contacts-btn {
-  background: #D41342;
+  background: #d41342;
   border-radius: 22px;
 }
-
