--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -70,6 +70,50 @@ img {
   }
 }
 
+.hero {
+  height: 665px;
+  background-color: var(--hero-backgroung-color);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
+}
+
+.main-title {
+  width: 277px;
+  height: 137px;
+  margin-top: 171px;
+  margin-left: 115px;
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 38px;
+  line-height: 44px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: var(--main-white-color);
+}
+
+.main-title__passion {
+  font-size: 58px;
+  line-height: 90.5%;
+  color: #d41443;
+}
+
+.hero-btns {
+  position: absolute;
+  top: 333px;
+  left: 115px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+}
+
+.hero-btns .hero-btns__item:not(:last-child) {
+  margin-right: 15px;
+}
+
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -115,7 +159,7 @@ button {
 }
 
 .contacts {
-  background-color: #FFF5F6;
+  background-color: #fff5f6;
 }
 
 .container {
@@ -158,7 +202,7 @@ button {
 .contacts-cards-type {
   display: inline-block;
   padding: 0px 30px;
-  background: #F0D1A5;
+  background: #f0d1a5;
   border-radius: 4px;
   font-family: 'DM Sans';
   font-style: normal;
@@ -168,11 +212,11 @@ button {
   text-transform: uppercase;
   text-align: center;
   letter-spacing: 0.04em;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .contacts-cards-type--green {
-  background-color: #C2E297;
+  background-color: #c2e297;
 }
 
 .contacts-cards-city {
@@ -181,15 +225,15 @@ button {
 }
 
 .contacts-cards-text {
-  color: #907E82;
+  color: #907e82;
   padding-bottom: 25px;
   padding-top: 10px;
   line-height: 1.5;
 }
 
 .contacts-cards-timetable {
-  border-bottom: 1px solid #E1E1E1;
-  border-top: 1px solid #E1E1E1;
+  border-bottom: 1px solid #e1e1e1;
+  border-top: 1px solid #e1e1e1;
   padding-bottom: 25px;
   padding-top: 25px;
 }
@@ -199,13 +243,13 @@ button {
 }
 
 .contacts-cards-time {
-  color: #FFA5BA;
+  color: #ffa5ba;
   margin-bottom: 10px;
 }
 
 .contacts-cards-tel,
 .contacts-cards-mail {
-  color: #907E82;
+  color: #907e82;
   line-height: 1.5;
 }
 
@@ -224,7 +268,7 @@ button {
 }
 
 .contacts-btn {
-  background: #D41342;
+  background: #d41342;
   border-radius: 22px;
 }
 /*# sourceMappingURL=main.css.map */
