--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -52,6 +52,12 @@ img {
   margin: -1px;
 }
 
+.container {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0 auto;
+}
+
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
@@ -61,12 +67,16 @@ img {
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
+    padding-left: 35px;
+    padding-right: 35px;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .container {
     width: 1280px;
+    padding-left: 115px;
+    padding-right: 115px;
   }
 }
 
