add container in gallery

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,4 +1,6 @@
 <section class="gallery">
-    <h2 class="gallery__title visually-hidden">Gallery</h2>
-    <img src="" alt="many differents pictures">
+    <div class="container">
+        <h2 class="gallery__title visually-hidden">Gallery</h2>
+        <img src="" alt="many differents pictures">
+    </div>
 </section>
