--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,6 +1,6 @@
 <section class="gallery">
     <div class="container">
         <h2 class="gallery__title visually-hidden">Gallery</h2>
-        <img src="" alt="many differents pictures">
+        <img src="/images/gallery/gdMobile.png" alt="many differents pictures">
     </div>
 </section>
