--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -45,6 +45,12 @@ button {
   background-color: #fff5f6;
 }
 
+.container {
+  margin: 0 auto;
+  padding-right: 50px;
+  padding-left: 50px;
+}
+
 .contacts-title {
   opacity: 0;
 }
