--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -172,6 +172,12 @@ button {
   background-color: #fff5f6;
 }
 
+.container {
+  margin: 0 auto;
+  padding-right: 50px;
+  padding-left: 50px;
+}
+
 .contacts-title {
   opacity: 0;
 }
