--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -41,12 +41,14 @@
             <p class="contacts-cards-time">08:00 AM - 16:00 PM</p>
           </li>
         </ul>
-        <ul class="contacts-cards-list list"">
+        <ul class="contacts-cards-list list">
           <li>
             <a href="tel:+610383766284" class="contacts-cards-tel link">+61(0) 383 766 284</a>
           </li>
           <li>
-            <a href="mailto:noreply@envato.com" class="contacts-cards-mail link">noreply@envato.com</a>
+            <a href="mailto:noreply@envato.com" class="contacts-cards-mail link"
+              >noreply@envato.com</a
+            >
           </li>
         </ul>
       </li>
@@ -69,17 +71,47 @@
             <a href="tel:+610383766284" class="contacts-cards-tel link">+61(0) 383 766 284</a>
           </li>
           <li>
-            <a href="mailto:noreply@envato.com" class="contacts-cards-mail link">noreply@envato.com</a>
+            <a href="mailto:noreply@envato.com" class="contacts-cards-mail link"
+              >noreply@envato.com</a
+            >
           </li>
         </ul>
       </li>
     </ul>
     <ul class="contacts-btn-list list">
       <li class="contacts-btn-list__item">
-        <button type="button" class="contacts-btn">Our locations</button>
+        <button type="button" class="contacts-btn">
+          Our locations
+          <svg id="icon-Vector1" viewBox="0 0 19 32" width="4" height="8">
+            <path
+              fill="none"
+              stroke="#fff"
+              style="stroke: var(--color1, #fff)"
+              stroke-linejoin="round"
+              stroke-linecap="round"
+              stroke-miterlimit="4"
+              stroke-width="6.4"
+              d="M3.2 3.2l11.553 12.8-11.553 12.8"
+            ></path>
+          </svg>
+        </button>
       </li>
       <li class="contacts-btn-list__item">
-        <button type="button" class="contacts-btn contacts-btn--inverse">Franchise</button>
+        <button type="button" class="contacts-btn contacts-btn--inverse">
+          Franchise
+          <svg id="icon-Vector1" viewBox="0 0 19 32" width="4" height="8">
+            <path
+              fill="none"
+              stroke="#D41342"
+              style="stroke: var(--color1, #d41342)"
+              stroke-linejoin="round"
+              stroke-linecap="round"
+              stroke-miterlimit="4"
+              stroke-width="6.4"
+              d="M3.2 3.2l11.553 12.8-11.553 12.8"
+            ></path>
+          </svg>
+        </button>
       </li>
     </ul>
   </div>
