--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -70,58 +70,52 @@ img {
   }
 }
 
-html {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+.hero {
+  height: 665px;
+  background-color: var(--hero-backgroung-color);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
 }
 
-body {
-  margin: 0;
+.main-title {
+  width: 277px;
+  height: 137px;
+  margin-top: 171px;
+  margin-left: 115px;
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 38px;
+  line-height: 44px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: var(--main-white-color);
 }
 
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
+.main-title__passion {
+  font-size: 58px;
+  line-height: 90.5%;
+  color: #d41443;
 }
 
-ul {
-  margin: 0;
-  padding: 0;
+.hero-btns {
+  position: absolute;
+  top: 333px;
+  left: 115px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
 }
 
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-button {
-  cursor: pointer;
-}
-
-.link {
-  text-decoration: none;
-}
-
-.list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+.hero-btns .hero-btns__item:not(:last-child) {
+  margin-right: 15px;
 }
 
 .contacts {
   background-color: #FFF5F6;
-}
-
-.container {
-  margin: 0 auto;
-  padding-right: 50px;
-  padding-left: 50px;
 }
 
 .contacts-title {
@@ -226,5 +220,17 @@ button {
 .contacts-btn {
   background: #D41342;
   border-radius: 22px;
+  border: 0;
+  width: 162px;
+  height: 44px;
+  color: #fff;
+  margin-bottom: 10px;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.contacts-btn--inverse {
+  background: #FFFFFF;
+  color: #D41342;
 }
 /*# sourceMappingURL=main.css.map */
