--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="advantages">
+<!-- <section class="advantages">
  <div class="container">
     <h2 class="advantages__title visually-hidden">Advantages</h2>
     <ul class="advantages__list list">
@@ -19,4 +19,4 @@
     </ul>
  </div>
 
-</section>
+</section> -->
