--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -5,7 +5,12 @@ body {
 }
 .list {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 .link {
   text-decoration: none;
+}
+button {
+  cursor: pointer;
 }
